--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container-fluid">
-	<div class="row">
+	<div class="col-sm-1">
 		<img class="col-sm-1" src="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
         <img class="col-sm-1" src="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
         <img class="col-sm-1" src="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
@@ -24,7 +24,7 @@
         <img class="col-sm-1" src="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
         <img class="col-sm-1" src="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
     </div>
-	<div class="row">
+	<div class="col-sm-2">
 		<img class="col-sm-2" src="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
        <img class="col-sm-2" src="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
        <img class="col-sm-2" src="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
@@ -34,13 +34,13 @@
        
 	</div>
 
-	<div class="row">
+	<div class="col-sm-4">
 		<img class="col-sm-4" src="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
        <img class="col-sm-4" src="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
        <img class="col-sm-4" src="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
 	</div>
 
-	<div class="row">
+	<div class="col-sm-12">
 		<img class="col-sm-12" src="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
        
 	</div>
