--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
 	</div>
 
 	<div class="col-sm-12">
-		<img class="col-sm-12" src="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
+		<img src="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img">
        
 	</div>
 	</div>
